# compartmental

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  my_model0.data  my_model1.data  my_model2.data  my_model3.data  my_model4.data  my_model5.data  my_model6.data  objects.inv  pyproject.toml  seir.data  sir.data  sir_temp.data  sitemap.xml
.github/workflows/: bumpver-minor.yml  bumpver-patch.yml  ci-master.yml
LICENSE/: index.html
SUMMARY/: index.html
compartmental/: __init__.py  generic_model.py  util.py
docs/: SUMMARY.md  generate_reference_docs.py
docs/examples/: MY_MODEL.md  SEIR.md  SIR.md
docs/reference/compartmental/: generic_model.md  util.md
docs/reference/compartmental/parameters/: parameters_manager.md
examples/: MY_MODEL.md  SEIR.md  SIR.md  i.ipynb  my_model.data  my_model.ipynb  my_model.py  my_model0.data  my_model1.data  my_model2.data  my_model3.data  my_model4.data  my_model5.data  my_model6.data  my_model_part2.py  random_shit.py  seir.py  sir.data  sir.ipynb  sir.py  ssheirdpd.py
examples/MY_MODEL/: index.html
examples/SEIR/: index.html
examples/SIR/: index.html
reference/compartmental/generic_model/: index.html
reference/compartmental/parameters/parameters_manager/: index.html
reference/compartmental/util/: index.html
search/: search_index.json
