[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compartmental"
version = "0.0.3"
requires-python = ">=3.8"

description = "Compartmental models with ABC inference optimized for GPU use"

authors = [
    {name =  "Unai Lería Fortea"   , email =  "unaileria@gmail.com"}]

maintainers = [
    {name =  "Unai Lería Fortea"   , email =  "unaileria@gmail.com"}] 


readme = "README.md"
license = { text="Apache License 2.0"}

keywords = []

classifiers = []

dependencies = ['numpy']

[project.urls]
"GitHub" = "https://github.com/QuanticPony/compartmental"
"Documentation" = "https://QuanticPony/.github.io/compartmental/"

[tool.bumpver]
current_version = "0.0.3"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Update version: {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    '^version = "{version}"',
    'current_version = "{version}"',
]
"compartmental/__init__.py" = [
    '__version__ = "{version}"',
]